data/issues_nolabel/nolabel_test_1362.txt
matrix_solve_ls_op Compile Error on gcc 4.8 (using typename error)

I have been trying to compile tensorflow from source without success.
I could compile version 0.6.0 with no trouble, but trying to compile 0.7.1 produces the following error:

tensorflow/core/kernels/matrix_solve_ls_op.cc: In member function 'void tensorflow::MatrixSolveLsOp::ComputeMatrix(tensorflow::OpKernelContext*, const typename tensorflow::BinaryLinearAlgebraOp::ConstMatrixMap&, const typename tensorflow::BinaryLinearAlgebraOp::ConstMatrixMap&, typename tensorflow::BinaryLinearAlgebraOp::MatrixMap*)':
tensorflow/core/kernels/matrix_solve_ls_op.cc:111:41: error: 'Matrix' is not a class, namespace, or enumeration
               (Scalar(l2_regularizer) * Matrix::Ones(cols, 1)).asDiagonal();
                                         ^
tensorflow/core/kernels/matrix_solve_ls_op.cc:131:41: error: 'Matrix' is not a class, namespace, or enumeration
               (Scalar(l2_regularizer) * Matrix::Ones(rows, 1)).asDiagonal();
                                         ^
In file included from ./tensorflow/core/framework/op_kernel.h:22:0,
                 from tensorflow/core/kernels/matrix_solve_ls_op.cc:23:
./tensorflow/core/framework/allocator.h: In member function 'virtual std::size_t tensorflow::Allocator::RequestedSize(void*)':
./tensorflow/core/framework/allocator.h:128:3: warning: control reaches end of non-void function [-Wreturn-type]
   }
   ^
In file included from ./tensorflow/core/framework/op_kernel.h:25:0,
                 from tensorflow/core/kernels/matrix_solve_ls_op.cc:23:
./tensorflow/core/framework/device_base.h: In member function 'virtual tensorflow::Allocator* tensorflow::DeviceBase::GetAllocator(tensorflow::AllocatorAttributes)':
./tensorflow/core/framework/device_base.h:149:3: warning: control reaches end of non-void function [-Wreturn-type]
   }
   ^
./tensorflow/core/framework/device_base.h: In member function 'virtual const tensorflow::DeviceAttributes& tensorflow::DeviceBase::attributes() const':
./tensorflow/core/framework/device_base.h:179:3: warning: control reaches end of non-void function [-Wreturn-type]
   }
   ^

I tried to find the definition of Matrix::Ones in all folders, but couldn't find anything. In fact

grep "Ones" tensorflow/* -R

returns

core/kernels/matrix_solve_ls_op.cc:              (Scalar(l2_regularizer) * Matrix::Ones(cols, 1)).asDiagonal();
core/kernels/matrix_solve_ls_op.cc:              (Scalar(l2_regularizer) * Matrix::Ones(rows, 1)).asDiagonal();
python/kernel_tests/constant_op_test.py:class OnesTest(tf.test.TestCase):
python/kernel_tests/constant_op_test.py:  def _Ones(self, shape):
python/kernel_tests/constant_op_test.py:    self.assertTrue(np.array_equal(self._Ones([2, 3]), np.array([[1] * 3] * 2)))
python/kernel_tests/constant_op_test.py:class OnesLikeTest(tf.test.TestCase):
python/kernel_tests/constant_op_test.py:  def testOnesLike(self):
python/kernel_tests/constant_op_test.py:  def testOnesLikePartialShape(self):
python/kernel_tests/shape_ops_test.py:  def testSqueezeAllOnes(self):
python/kernel_tests/shape_ops_test.py:  def testSqueezeOnlyOnes(self):

Environment info
OS : CentOS 6.6, but I have gcc 4.8.2 installed.
Steps to reproduce

./configure

say yes to GPU, cuda 7.5, cudnn 4

bazel build --config=cuda --jobs 6 --verbose_failures --linkopt="-lrt" --linkopt="-lm" --genrule_strategy=standalone --spawn_strategy=standalone -c opt //tensorflow/tools/pip_package:build_pip_package